--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -4,9 +4,9 @@ fos_rest:
         include_format: false
     view:
         view_response_listener:  true
-#    format_listener:
-#        rules:
-#            - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
+    format_listener:
+        rules:
+        - { path: '^/', priorities: ['json'], fallback_format: 'json' }
 #    param_fetcher_listener:  true
 #    allowed_methods_listener:  true
 #    exception:
