--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,14 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+places:
+  type: rest
+  resource: App\Controller\PlaceController
+
+prices:
+  type: rest
+  resource: App\Controller\PriceController
+
+users:
+  type: rest
+  resource: App\Controller\UserController
