--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,5 +1,9 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        App\Entity\User:
+            algorithm: bicrypt
+            cost: 12
     providers:
         in_memory: { memory: ~ }
     firewalls:
