--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,7 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     encoders:
         App\Entity\User:
-            algorithm: bicrypt
+            algorithm: bcrypt
             cost: 12
     providers:
         in_memory: { memory: ~ }
